<resources>
    <string name="app_name">OSU</string>
    <string name="schedule">Расписание</string>
    <string name="notes">Заметки</string>
    <string name="osu_logo">Лого ОГУ</string>
    <string name="osu_name">ОГУ имени И.С. Тургенева</string>
    <string name="show_schedule">Показать\nрасписание</string>
    <string name="open_notes">Открыть\nзаметки</string>
    <string name="hi_student">Привет, студент!</string>
    <string name="nav_schedule_desc">Перейти к расписанию</string>
    <string name="nav_notes_desc">Перейти к заметкам</string>
    <string name="nav_osu_logo_desc">Логотип ОГУ</string>
    <string name="plus">Плюс</string>
    <string name="add_note">Добавить заметку</string>
    <string name="back_button">Кнопка назад</string>
    <string name="forward_button">Кнопка вперед</string>
    <string name="open_chat">Открыть чат</string>
    <string name="Chat">Открыть чат</string>
</resources>