<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_notes"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!--Верхний контейнер-->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <!-- Верхний контейнер -->
        <LinearLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical">

            <!-- Логотип слева -->
            <ImageButton
                android:id="@+id/nav_osu_logo"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/osu_logo"
                android:src="@drawable/ic_osu_logo" />

            <!-- Текст справа -->
            <TextView
                android:id="@+id/osu_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/osu_name"
                android:textColor="@color/darkblue"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Полоса снизу -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/top_container"
            android:background="@color/darkblue" />


    </RelativeLayout>
    <!-- Список заметок -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/header"
        android:layout_above="@id/footer"
        android:layout_marginTop="10dp" />

    <!--Середина-->
    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/header"
        android:layout_above="@id/footer"
        android:gravity="bottom"
        android:layout_margin="20dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:contentDescription="@string/add_note"
            app:backgroundTint="@color/darkblue"
            android:src="@drawable/ic_plus" />
    </LinearLayout>

    <!--Нижний контейнер-->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <!-- Полоса сверху -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darkblue" />

        <!-- Кнопки навигации -->
        <LinearLayout
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- Кнопка "Расписание" -->
            <ImageButton
                android:id="@+id/nav_schedule"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_schedule"
                android:contentDescription="@string/schedule"
                android:background="?android:attr/selectableItemBackground"/>

            <!-- Кнопка "Заметки" -->
            <ImageButton
                android:id="@+id/nav_notes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_notes"
                android:contentDescription="@string/notes"
                android:background="?android:attr/selectableItemBackground"/>

            <ImageButton
                android:id="@+id/nav_chat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/message"
                android:contentDescription="@string/Chat"
                android:background="?android:attr/selectableItemBackground"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
