<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_schedule"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!--Верхний контейнер-->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <!-- Верхний контейнер -->
        <LinearLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical">

            <!-- Логотип слева -->
            <ImageButton
                android:id="@+id/nav_osu_logo"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/osu_logo"
                android:src="@drawable/ic_osu_logo" />

            <!-- Текст справа -->
            <TextView
                android:id="@+id/osu_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/osu_name"
                android:textColor="@color/darkblue"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Полоса снизу -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/top_container"
            android:background="@color/darkblue" />


    </RelativeLayout>

    <!--Середина-->
    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_above="@id/footer"
        android:gravity="top"
        android:layout_margin="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:clipToPadding="false"/>

        <EditText
            android:id="@+id/message_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:hint="Введите сообщение"
            android:layout_margin="16dp"
            android:background="@android:color/darker_gray"
            android:padding="10dp"/>

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/message_input"
            android:layout_alignParentEnd="true"
            android:text="Отправить"
            android:layout_marginEnd="16dp"/>


    </RelativeLayout>

    <!--Нижний контейнер-->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <!-- Полоса сверху -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darkblue" />

        <!-- Кнопки навигации -->
        <LinearLayout
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- Кнопка "Расписание" -->
            <ImageButton
                android:id="@+id/nav_schedule"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_schedule"
                android:contentDescription="@string/schedule"
                android:background="?android:attr/selectableItemBackground"/>

            <!-- Кнопка "Заметки" -->
            <ImageButton
                android:id="@+id/nav_notes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_notes"
                android:contentDescription="@string/notes"
                android:background="?android:attr/selectableItemBackground"/>

            <ImageButton
                android:id="@+id/nav_chat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/message"
                android:contentDescription="@string/Chat"
                android:background="?android:attr/selectableItemBackground"/>
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
