<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <!-- Верхний контейнер -->
        <LinearLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical">

            <!-- Логотип слева -->
            <ImageButton
                android:id="@+id/nav_osu_logo"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/osu_logo"
                android:src="@drawable/ic_osu_logo" />

            <!-- Текст справа -->
            <TextView
                android:id="@+id/osu_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/osu_name"
                android:textColor="@color/darkblue"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Полоса снизу -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/top_container"
            android:background="@color/darkblue" />
    </RelativeLayout>



    <!-- Середина -->
    <LinearLayout
        android:id="@+id/buttons_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_centerInParent="true">

        <!-- Приветствие -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_student"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:text="Войти"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/darkblue"/>

        <Button
            android:id="@+id/registerbutton"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:text="Зарегестрироваться"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/darkblue"/>

    </LinearLayout>

</RelativeLayout>
